# assaia-game

./: .gitignore  Makefile  README.md  pyproject.toml
src/assaia_game/: __init__.py  main.py  run.py
src/assaia_game/application/: add_player.py  create_draft.py  finalize_draft.py  gateways.py  play_turn.py  read_models.py  types.py
src/assaia_game/domain/: board.py  game_session.py  game_status.py  lobby.py  player.py  referee.py  symbol.py
src/assaia_game/infrastructure/: in_mem_daos.py
src/assaia_game/presentation/: cli_add_player.py  cli_create_draft.py  cli_engine.py  cli_finalize_draft.py  cli_inputter.py  cli_messages.py  cli_play_turn.py  cli_presenter.py  cli_renderer.py
src/assaia_game/setup/: build.py  config.py
