[build-system]
requires = ["hatchling>=1.13"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[project]
name = "assaia-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ivan-borovets", email = "130386813+ivan-borovets@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy==1.17.1",
    "pre-commit==4.2.0",
    "ruff==0.11.2",
    "slotscheck>=0.19.1",
]

[project.scripts]
assaia = "assaia_game.run:main"

[tool.mypy]
files = [
    "src",
]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
disallow_untyped_defs = false
plugins = []

[tool.ruff]
line-length = 88
preview = true  # experimental

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "A", # flake8-builtins            https://docs.astral.sh/ruff/rules/#flake8-builtins-a
    "ARG", # flake8-unused-arguments  https://docs.astral.sh/ruff/rules/#flake8-unused-arguments-arg
    "ASYNC", # flake8-async           https://docs.astral.sh/ruff/rules/#flake8-async-async
    "B", # flake8-bugbear             https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "C4", # flake8-comprehensions     https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "C90", # mccabe                   https://docs.astral.sh/ruff/rules/#mccabe-c90
    #    "COM", # flake8-commas            https://docs.astral.sh/ruff/rules/#flake8-commas-com
    # Incompatible with ruff formatter, but can be useful (uncomment once, then review changes)
    # See: https://github.com/astral-sh/ruff/issues/9216
    "DTZ", # flake8-datetimez         https://docs.astral.sh/ruff/rules/#flake8-datetimez-dtz
    "E", # pycodestyle-error          https://docs.astral.sh/ruff/rules/#error-e
    "ERA001", # commented-out-code    https://docs.astral.sh/ruff/rules/#eradicate-era
    "F", # pyflakes                   https://docs.astral.sh/ruff/rules/#pyflakes-f
    "FLY", # flynt                    https://docs.astral.sh/ruff/rules/#flynt-fly
    "I", # isort                      https://docs.astral.sh/ruff/rules/#isort-i
    "LOG", # flake8-logging           https://docs.astral.sh/ruff/rules/#flake8-logging-log
    "N", # pep8-naming                https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "PERF", # Perflint                https://docs.astral.sh/ruff/rules/#perflint-perf
    "PL", # pylint                    https://docs.astral.sh/ruff/rules/#pylint-pl
    "PT", # flake8-pytest-style       https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
    "PTH", # flake8-use-pathlib       https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "Q", # flake8-quotes              https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "RET", # flake8-return (RET)      https://docs.astral.sh/ruff/rules/#flake8-return-ret
    "RSE", # flake8-raise (RSE)       https://docs.astral.sh/ruff/rules/#flake8-raise-rse
    "RUF", # Ruff-specific rules      https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "S", # flake8-bandit              https://docs.astral.sh/ruff/rules/#flake8-bandit-s
    "SIM", # flake8-simplify          https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "SLF", # flake8-self (SLF)        https://docs.astral.sh/ruff/rules/#flake8-self-slf
    "SLOT", # flake8-slots            https://docs.astral.sh/ruff/rules/#flake8-slots-slot
    "T20", # flake8-print             https://docs.astral.sh/ruff/rules/#flake8-print-t20
    "TCH", # flake8-type-checking     https://docs.astral.sh/ruff/rules/#flake8-type-checking-tch
    "TID", # flake8-tidy-imports      https://docs.astral.sh/ruff/rules/#flake8-tidy-imports-tid
    "UP", # pyupgrade                 https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "W", # pycodestyle-warning        https://docs.astral.sh/ruff/rules/#warning-w
]
ignore = [
    "PLR0913", # too-many-arguments
    "PLR6301", # no-self-use
    "T201", # print
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
split-on-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
"src/assaia_game/domain/referee.py" = ["PLR1702", ]           # too-many-nested-blocks
"src/assaia_game/domain/lobby.py" = ["TC001", ]               # typing-only-first-party-import
"src/assaia_game/presentation/cli_inputter.py" = [
    "C901", # complex-structure
    "PLR0912", # too-many-branches
]

[tool.slotscheck]
strict-imports = true
